--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*
 @font-face {
   font-family: 'Pacifico';
   src: url('pacifico.eot');
@@ -6,6 +7,7 @@
        url('pacifico.ttf') format('truetype'),
        url('pacifico.svg#Pacifico') format('svg');
 }
+*/
 
 #disqus_thread{margin-top:20px;}
 *{-moz-box-sizing:border-box;box-sizing:border-box;}
