--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@
 *{-moz-box-sizing:border-box;box-sizing:border-box;}
 .main-slider{background:#cccccc}
 .main-slider h3{background:#fff;color:#3498db;font-size:36px;line-height:100px;margin:10px;padding:2%;position:relative;text-align:center;}
+
+.main-slider .slide {background:#fff;color:#3498db;font-size:36px;line-height:100px;margin:10px;padding:2%;position:relative;text-align:center;}
+
 .variable-width .slick-slide p { background: #fff; height: 100px; color:#3498db; margin: 5px; line-height: 100px; }
 .button{background:#3498db;color:#fff;display:block;font-size:16px;margin:20px auto;padding:20px;text-align:center;text-decoration:none;width:48%;}
 .buttons{padding:0 20px 20px; margin-bottom: 10px;}
